Add payment integration - clean for GitHub (no API keys in history)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,19 @@ POSTGRES_PORT=5432
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
+
+# Stripe Configuration
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# PayThor Configuration (if using)
+PAYTHOR_API_KEY=your_paythor_api_key_here
+PAYTHOR_SECRET_KEY=your_paythor_secret_key_here
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
@@ -23,6 +36,7 @@ JWT_EXPIRES_IN=7d
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 
 # PayThor Configuration
 PAYTHOR_API_KEY=your_paythor_api_key
