--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint",
     "docker:down": "docker compose down",
     "docker:up": "docker compose up -d",
+    "docker:dev:up": "docker compose -f docker-compose.dev.yml up -d",
+    "docker:dev:down": "docker compose -f docker-compose.dev.yml down",
+    "docker:dev:rebuild": "docker compose -f docker-compose.dev.yml down && docker compose -f docker-compose.dev.yml up -d --build",
+    "docker:logs": "docker compose logs -f",
+    "docker:clean": "docker system prune -a",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -19,7 +24,8 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^5.22.0",
-    "@stripe/stripe-js": "^2.1.11",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
