--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,14 @@ build/
 dist/
 
 # Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.staging
+.env.production
 
 # IDE and Editor files
 .vscode/
