--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "next": "15.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwindcss": "^4.0.0",
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^5.22.0",
     "@stripe/stripe-js": "^2.1.11",
@@ -32,22 +28,25 @@
     "clsx": "^2.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "next": "15.4.2",
     "next-auth": "^4.24.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.48.2",
     "stripe": "^14.5.0",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/eslint": "^8.44.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/eslint": "^8.44.8",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
@@ -56,7 +55,8 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.7.0",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.6.1"
+    "tsx": "^4.6.1",
+    "typescript": "^5.3.2"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
