reviews done , fixed checkout problems and more

--- a/.env
+++ b/.env
@@ -1,11 +1,37 @@
+# Database Configuration
 DATABASE_URL="postgresql://postgres:postgres_password@localhost:5432/ecommerce_db"
 POSTGRES_DB=ecommerce_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+
+# Redis Configuration
 REDIS_URL="redis://localhost:6379"
+
+# Authentication
 NEXTAUTH_SECRET="your-secret-key-here"
 JWT_SECRET="your-jwt-secret-here"
+
+# Application Configuration
 NODE_ENV=development
 PORT=3000
+
+# Security Configuration
+BCRYPT_SALT_ROUNDS=12
+DEFAULT_SEED_PASSWORD="password123"
+
+# API Configuration (optional for products)
+EXTERNAL_API_TIMEOUT=5000
+
+# Stripe Configuration (if using)
+STRIPE_PUBLIC_KEY="pk_test_your_stripe_public_key"
+STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
+STRIPE_WEBHOOK_SECRET="whsec_your_webhook_secret"
+
+# Email Configuration (optional)
+EMAIL_SERVER_HOST="smtp.gmail.com"
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER="your-email@gmail.com"
+EMAIL_SERVER_PASSWORD="your-app-password"
+EMAIL_FROM="noreply@yourstore.com"
