--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ NEXTAUTH_SECRET="your-secret-key-here"
 JWT_SECRET="your-jwt-secret-here"
 NODE_ENV=development
 PORT=3000
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
