--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_publishable_key
+STRIPE_SECRET_KEY=your_secret_key
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres_password@localhost:5432/ecommerce_db
 POSTGRES_DB=ecommerce_db
