--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^5.22.0",
-    "@stripe/stripe-js": "^2.1.11",
+    "@stripe/react-stripe-js": "^3.8.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "bcryptjs": "^2.4.3",
@@ -28,6 +29,7 @@
     "clsx": "^2.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-auth": "^4.24.5",
     "react": "^19.1.0",
